# fintech-agent

./: main.py  pyproject.toml
agent/: agent.py  agent1.py  agent_bk.py  intent_classifier.py  mcp_client.py  ollama_client.py
api/: app.py
data/: accounts.json  customers.json
mcp-servers/banking/: server.py
mcp-servers/credit-risk/: server.py
mcp-servers/customer-profile/: server.py
