[project]
name = "fintech-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-ollama>=1.0.1",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.42.0",
]
